# 123

./: .gitignore  Cargo.toml  PROMPT.md  README.md  README_IMPLEMENTATION.md  test_ws_simple.rs  Общая архитектура Shared Memory.md  ТЗ binance_futures_writer (Rust).md
src/: lib.rs  main.rs  price.rs  shm.rs  symbols.rs  ws.rs
tests/: integration_test.rs
