[package]
name = "binance-futures-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
libc = "0.2"
anyhow = "1.0"

[dev-dependencies]
# For testing
